blrlblelrlrl
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp: In member function ‘void midiMind::ProcessorManager::resetStatistics()’:
/home/pi/midiMind/backend/src/midi/processing/ProcessorManager.cpp:582:16: warning: unused structured binding declaration [-Wunused-variable]
  582 |     for (auto& [id, chain] : chains_) {
      |                ^~~~~~~~~~~
[ 86%] Building CXX object CMakeFiles/midimind.dir/src/midi/sysex/SysExParser.cpp.o
[ 90%] Building CXX object CMakeFiles/midimind.dir/src/api/ApiServer.cpp.o
[ 93%] Building CXX object CMakeFiles/midimind.dir/src/api/CommandHandler.cpp.o
[ 96%] Building CXX object CMakeFiles/midimind.dir/src/api/MessageEnvelope.cpp.o
/home/pi/midiMind/backend/src/api/ApiServer.cpp: In member function ‘bool midiMind::ApiServer::sendTo(connection_hdl, const midiMind::MessageEnvelope&)’:
/home/pi/midiMind/backend/src/api/ApiServer.cpp:169:39: error: ‘const class midiMind::MessageEnvelope’ has no member named ‘toJsonString’; did you mean ‘toString’?
  169 |         std::string jsonStr = message.toJsonString();
      |                                       ^~~~~~~~~~~~
      |                                       toString
/home/pi/midiMind/backend/src/api/ApiServer.cpp: In member function ‘void midiMind::ApiServer::broadcast(const midiMind::MessageEnvelope&)’:
/home/pi/midiMind/backend/src/api/ApiServer.cpp:216:35: error: ‘const class midiMind::MessageEnvelope’ has no member named ‘toJsonString’; did you mean ‘toString’?
  216 |     std::string jsonStr = message.toJsonString();
      |                                   ^~~~~~~~~~~~
      |                                   toString
/home/pi/midiMind/backend/src/api/ApiServer.cpp: In member function ‘void midiMind::ApiServer::onMessage(connection_hdl, message_ptr)’:
/home/pi/midiMind/backend/src/api/ApiServer.cpp:299:44: error: ‘fromJsonString’ is not a member of ‘midiMind::MessageEnvelope’
  299 |         auto messageOpt = MessageEnvelope::fromJsonString(payload);
      |                                            ^~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/midimind.dir/build.make:443: CMakeFiles/midimind.dir/src/api/ApiServer.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/midimind.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
